fix: modal overflow

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -28,7 +28,6 @@
 
 .innerContent {
   max-height: calc(100vh - 300px);
-  overflow: auto;
 }
 
 .closeLink {
